--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/bxslider.min.css">
     <link rel="stylesheet" href="style.css">
     <title>NEKMIT</title>
     
@@ -91,6 +92,22 @@
 
     </nav>
   </header>
+
+  <section id="slider_area">
+     <div class="inner_slider">
+         <div class="slider_container">
+            <div class="slider_area">
+                <div class="item"><img src="/img/img_1.jpg" alt=""></div>
+                <div class="item"><img src="/img/img_2.jpg" alt=""></div>
+            </div>
+         </div>
+     </div>
+  </section>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="/js/jquery.bxslider.min.js"></script>
+  <script src="/js/main.js"></script>
 
 </body>
 </html>
