--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="inner_header">
             <div class="main-header-container">
                 <div class="logo_area">
-                    <a href="index.html"> <img src="/img/logo.gif" alt=logo"> </a>
+                    <a href="index.html"> <img src="/img/logo.png" alt=logo"> </a>
                 </div>
                 <div class="social_area">
                     <ul>
