--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
      <div class="inner_slider">
          <div class="slider_container">
             <div class="slider_area">
-                <div class="item"><img src="/img/img_1.jpg" alt=""></div>
-                <div class="item"><img src="/img/img_2.jpg" alt=""></div>
+                <div class="item"><img src="img/img_1.jpg" alt=""></div>
+                <div class="item"><img src="img/img_2.jpg" alt=""></div>
             </div>
          </div>
      </div>
