--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="inner_header">
             <div class="main-header-container">
                 <div class="logo_area">
-                    <a href="index.html"> <img src="/img/logo.png" alt=logo"> </a>
+                    <a href="index.html"> <img src="img/logo.png" alt=logo"> </a>
                 </div>
                 <div class="social_area">
                     <ul>
@@ -105,9 +105,92 @@
   </section>
 
 
+
+  <section id="work_area">
+      <div class="inner_work">
+          <div class="work_container">
+              <div class="about_us">
+                  <h2>A Little About Us</h2>
+                  <img src="img/about_us_img.png" alt="">
+                  <p>Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.</p>
+                  <p>Idenim semper pellente velis felit ac. Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt.</p>
+                  <a href="#">Read More About Us »</a>
+             </div>
+
+             <div class="Service_area">
+                  <h2>Some of Our Services</h2>
+                  <div class="child_service">
+                      <div class="service_img">
+                          <img src="img/service_img.png" alt="">
+                      </div>
+                      <div class="service_text">
+                          <h3>Service Name</h3>
+                          <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean. </p>
+                      </div>
+                  </div>
+
+                  <div class="child_service">
+                    <div class="service_img">
+                        <img src="img/service_img.png" alt="">
+                    </div>
+                    <div class="service_text">
+                        <h3>Service Name</h3>
+                        <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean. </p>
+                    </div>
+                  </div>
+
+                  <div class="child_service">
+                    <div class="service_img">
+                        <img src="img/service_img.png" alt="">
+                    </div>
+                    <div class="service_text">
+                        <h3>Service Name</h3>
+                        <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean. </p>
+                    </div>
+                  </div>
+
+                  <div class="child_service">
+                    <div class="service_img">
+                        <img src="img/service_img.png" alt="">
+                    </div>
+                    <div class="service_text">
+                        <h3>Service Name</h3>
+                        <p>Inteligula congue id elis donec sce sag ittis intes id laoreet aenean. </p>
+                    </div>
+                  </div>
+
+                  <a href="#">View All Of Our Services »</a>
+             </div>
+
+             <div class="clients_reviews">
+                 <h2>What Our Clients Say</h2>
+                 <div class="child_clients_reviews">
+                     <h3><span>"</span>Tommy Tanker - CEO</h3>
+                     <p>Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit. Idenim semper pellente velis felit ac nullam pretium morbi lacus.</p>
+
+                     <a href="#">View This Project »</a>
+                 </div>
+
+                 <div class="child_clients_reviews">
+                    <h3><span>"</span>Tommy Tanker - CEO</h3>
+                    <p>Justoid nonummy laoreet phasellent penatoque in antesque pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoreet tincidunt ut vel velit. Idenim semper pellente velis felit ac nullam pretium morbi lacus.</p>
+
+                    <a href="#">View This Project »</a>
+                </div>
+
+             </div>
+
+         </div> 
+      </div>
+  </section>
+
+
+
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="/js/jquery.bxslider.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/jquery.bxslider.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
