try to fix mobile extra whide problem

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/meanmenu.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/bxslider.min.css">
     <link rel="stylesheet" href="style.css">
@@ -14,6 +15,7 @@
 
 </head>
 <body>
+  <div id="mob_nav"></div>  
   <header class="header-area">
     <div id="top-header">
         <div class="inner-top-header">
@@ -191,6 +193,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
+  <script src="js/meanmenu.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
